# Milestone_01

./: .gitignore  START_HERE.md  app.py  pyproject.toml  requirements-streamlit.txt  requirements.txt  run_local.py  run_stack.ps1  streamlit_app.py  test_local_stack.py  vercel.json
.streamlit/: config.toml  secrets.toml.example
Docs/: architecture.md  edge_cases.md  google-stitch-ui-prompt.md  problemstatement.md
Phase1/src/: __init__.py  config.py  filter.py  ingestion.py  llm_client.py  main.py
Phase1/src/templates/: index.html
Phase2/: README.md  requirements.txt
Phase2/src/: config.py  embeddings.py  filter.py  hybrid.py  ingestion.py  llm_client.py  main.py  vector_store.py
Phase3/: .env.example  README.md  requirements.txt
Phase3/scripts/: test_bellandur.py
Phase3/src/: agent.py  config.py  embeddings.py  filter.py  groq_client.py  hybrid.py  llm_client.py  main.py  session_memory.py  tools.py  vector_store.py
Phase4/: .env.example  README.md  server.py
Phase4/public/: index.html
Phase4/public/css/: styles.css
Phase4/public/js/: app.js  config.js
Phase5/: .env.example  README.md  requirements.txt  streamlit_app.py
Phase5/p5/: __init__.py  config.py
Phase5/src/: config.py  stack.py  ui.py
Screens/: README.md
Screens/zomato-ai-home/: app.js  index.html  styles.css
scripts/: test_local_stack.py  vercel_build.py
