[project]
name = "milestone-01"
version = "1.0.0"
description = "Zomato AI restaurant recommendations — Phase 3 API for Vercel"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "numpy>=1.24.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
]

[tool.vercel]
entrypoint = "app:app"

[tool.vercel.scripts]
build = "python scripts/vercel_build.py"
